--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,23 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  color: #555;
+  padding: 6px 8px;
+  font: 12px Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  background: white;
+  background: rgba(255,255,255,0.8);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
+.legend table {
+  border-collapse: collapse;
+}
+
+.legend th {
+  width: 20px;
+  height: 20px;
+  /* background-color: red; */
+}
