--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,13 +10,13 @@ html {
 }
 
 .legend {
-  color: #555;
+  color: rgb(0, 88, 155);
   padding: 6px 8px;
   font: 12px Arial, Helvetica, sans-serif;
   font-weight: bold;
-  background: white;
-  background: rgba(255,255,255,0.8);
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: rgba(67, 174, 255, 0.2);
+  box-shadow: 0 3px 20px rgb(199, 231, 255);
+  border: 1px solid rgba(91, 184, 255);
   border-radius: 5px;
 }
 .legend table {
@@ -26,5 +26,20 @@ html {
 .legend th {
   width: 20px;
   height: 20px;
-  /* background-color: red; */
 }
+  .leaflet-popup-content-wrapper,
+    .leaflet-popup-tip {
+    background: rgb(0, 145, 255);
+    box-shadow: 0 3px 20px rgb(21 154 255);
+    color: rgb(195, 228, 253);
+    border-top: 1px solid rgb(2, 132, 232);
+    border-left: 1px solid rgb(2, 132, 232);
+    border-right: 1px solid rgb(2, 132, 232);
+}
+.leaflet-popup-close-button { 
+  color: rgb(195, 228, 253)!important;
+}
+.leaflet-popup-content hr{
+  border: 1px solid #b6ddfd;
+}
+
